# RSREU

./: .gitignore  README.md
Semester 1/Programming/: Lab_Work_10.py  Lab_Work_11.py  Lab_Work_12.py  Lab_Work_13.py  Lab_Work_14.py  Lab_Work_15.py  Lab_Work_20.py  Lab_Work_21.py  Lab_Work_22.py  Lab_Work_5.py  Lab_Work_6.py  Lab_Work_7.py  Lab_Work_8.py  Lab_Work_9.py
Semester 2/Programming/: Data.txt  Lab_Work_9.py
Semester 4/MDPL/LW13/lab/task_1/: 6-6.cpp  6-6.h  6-6.rc  CMakeLists.txt
Semester 4/MDPL/LW13/lab/task_1/lab_13_1/: lab_13_1.Asm  lab_13_1.RES  lab_13_1.rap  lab_13_1.undo
Semester 4/MDPL/LW13/lab/task_1/lab_13_1/Bak/: lab_13_1(1).Asm  lab_13_1(2).Asm  lab_13_1(3).Asm
Semester 4/MDPL/LW13/lab/task_2/: 6-7.cpp  6-7.h  6-7.rc  CMakeLists.txt
Semester 4/MDPL/LW13/lab/task_2/lab_13_2/: RCa08496  RCa11652  lab_13_1.Asm  lab_13_1.RES  lab_13_1.Rc  lab_13_1.rap  lab_13_1.undo
Semester 4/MDPL/LW13/lab/task_2/lab_13_2/Bak/: lab_13_1(1).Asm  lab_13_1(1).Rc  lab_13_1(2).Asm  lab_13_1(2).Rc  lab_13_1(3).Asm  lab_13_1(3).Rc  lab_13_1(4).Asm  lab_13_1(4).Rc  lab_13_1(5).Rc  lab_13_1(6).Asm  lab_13_1(6).Rc  lab_13_1(7).Asm  lab_13_1(8).Asm  lab_13_1(9).Asm
Semester 4/MDPL/LW13/lab/task_3/: 6-8.cpp  6-8.h  6-8.rc  CMakeLists.txt
Semester 4/MDPL/LW13/lab/task_3/lab_13_3/: RCa07752  RCa11448  lab_13_1.Asm  lab_13_1.RES  lab_13_1.Rc  lab_13_1.rap  lab_13_1.undo
Semester 4/MDPL/LW13/lab/task_3/lab_13_3/Bak/: lab_13_1(1).Asm  lab_13_1(1).Rc  lab_13_1(2).Asm  lab_13_1(2).Rc  lab_13_1(3).Asm  lab_13_1(3).Rc  lab_13_1(4).Asm  lab_13_1(4).Rc  lab_13_1(5).Rc  lab_13_1(6).Asm  lab_13_1(6).Rc  lab_13_1(7).Rc  lab_13_1(8).Asm  lab_13_1(8).Rc  lab_13_1(9).Rc
(+1236 files in other folders)
